# a2a-scanner

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DEV_MODE_GUIDE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build-macos.yml  python-tests.yml  release.yml
a2ascanner/: __init__.py  __main__.py  _version.py  cli.py
a2ascanner/api/: routes.py
a2ascanner/cli/: __init__.py  cli.py  policy_tui.py  wizard.py
a2ascanner/config/: config.py
a2ascanner/core/: analyzer_factory.py  exceptions.py  rule_registry.py  scan_policy.py  scanner.py
a2ascanner/core/analyzers/: __init__.py  base.py  meta_analyzer.py  static.py  yara_analyzer.py
a2ascanner/core/reporters/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py  table_reporter.py
a2ascanner/core/rules/: __init__.py  patterns.py  yara_scanner.py
a2ascanner/core/threats/: threats.py
a2ascanner/data/: __init__.py  default_policy.yaml  permissive_policy.yaml  strict_policy.yaml
a2ascanner/data/packs/core/: pack.yaml
a2ascanner/data/packs/core/python/: __init__.py
a2ascanner/data/packs/core/signatures/: agent_card.yaml  security.yaml
a2ascanner/data/packs/core/yara/: message_injection.yara
a2ascanner/data/prompts/: meta_analysis_prompt.md
docs/: a2a-threats-taxonomy.md  analyzer_guide.md  architecture.md  meta_llm_analyzer.md  scanner_placement_guide.md  testing_guide.md  usage_guide.md
examples/: malicious_examples.json
examples/a2a_threat_files/: agent_registry_spoof.js  aitm_proxy.js  exfil_sink.js  fanout_dos.js  ssrf_demo.js  tls_downgrade.js
examples/sample_agent_cards/: safe_agent.json  unsafe_agent.json
tests/: __init__.py  conftest.py  test_analyzer_factory.py  test_analyzer_factory_comprehensive.py  test_bug_fixes.py  test_cli.py  test_cli_formats.py  test_cli_formats_comprehensive.py  test_e2e.py  test_gap_closures.py  test_heuristic.py  test_integration.py  test_multi_pack_loading.py  test_policy_integration.py  test_policy_integration_comprehensive.py  test_reporters.py  test_reporters_comprehensive.py  test_rule_registry.py  test_rule_registry_comprehensive.py  test_scan_policy.py  test_scan_policy_comprehensive.py  test_static_analyzer.py  test_static_policy_integration.py  test_tui.py  test_wizard.py  test_yara.py
