[build-system]
requires = ["hatchling>=1.24.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cisco-ai-a2a-scanner"
dynamic = ["version"]
description = "A comprehensive security scanner for Agent-to-Agent (A2A) protocol threats"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Cisco" },
]
keywords = [
    "a2a",
    "agent-to-agent",
    "security",
    "scanner",
    "static-analysis",
    "fastapi",
    "llm",
    "threat-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "litellm==1.77.0",
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "PyYAML==6.0.3",
    "rich==14.3.3",
    "tabulate==0.9.0",
    "textual==7.5.0",
    "uvicorn==0.34.0",
    "yara-x==1.13.0",
]

[project.urls]
Homepage = "https://github.com/cisco-ai-defense/a2a-scanner"
Documentation = "https://github.com/cisco-ai-defense/a2a-scanner/tree/main/docs"
Repository = "https://github.com/cisco-ai-defense/a2a-scanner.git"
Issues = "https://github.com/cisco-ai-defense/a2a-scanner/issues"
Changelog = "https://github.com/cisco-ai-defense/a2a-scanner/releases"

[dependency-groups]
dev = [
    "liccheck==4.5.0",
    "mypy==1.14.1",
    "pip-audit==2.7.3",
    "pre-commit==4.0.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "ruff==0.14.12",
]

[project.scripts]
a2a-scanner = "a2ascanner.cli.cli:main"
a2a-scanner-api = "a2ascanner.api.server:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["a2ascanner"]

[tool.hatch.build.targets.sdist]
include = [
    "/a2ascanner",
    "/examples",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--maxfail=1 -v"
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Pydantic serializer warnings:UserWarning:pydantic.*",
]
markers = [
    "slow: tests that take noticeably longer than the rest of the suite",
    "integration: tests that hit external services or the network",
    "requires_llm: tests that need a configured LLM provider or API key",
    "e2e: end-to-end tests spanning multiple components or processes",
]

[tool.coverage.run]
source = ["a2ascanner"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "F401", "F841", "B904", "B006", "B007", "B008", "B023"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "litellm",
    "tabulate",
    "textual",
    "yaml",
    "yara",
    "yara_x",
]
ignore_missing_imports = true

[tool.liccheck]
authorized_licenses = [
    "apache",
    "apache 2.0",
    "Apache License, Version 2.0",
    "Apache Software License",
    "apache software license",
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "mit",
    "mit license",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "python software foundation license",
    "The Unlicense (Unlicense)",
    "isc license (iscl)",
    "ISC License (ISCL)",
]
